<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="2dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/topic_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/message_topic_edittext"
            android:layout_marginTop="5dp"
            android:background="@drawable/corner_background_grey"
            android:minHeight="50dp"
            android:padding="10dp"
            android:hint="@string/topic_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/messages_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:id="@+id/message_list_scroll_view"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_above="@id/send_message_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/message_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true"
                android:nestedScrollingEnabled="true" />

        </ScrollView>

        <LinearLayout
            android:id="@+id/send_message_layout"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:weightSum="4"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/message_edittext"
                android:layout_weight="3"
                android:background="@drawable/corner_background_grey"
                android:maxHeight="100dp"
                android:padding="10dp"
                android:inputType="textMultiLine"
                android:hint="@string/message_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/send_message_button"
                android:text="@string/send_text"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>